@@ -9,6 +9,8 @@ Revision history for {{$dist->name}}
         - PkgVersion now skips .pod files (thanks, David Golden)
         - build_element support added for [ModuleBuild] (thanks, David
           Wheeler!)
+        - PkgVersion now skips .pod files (David Golden)
+        - new native filefinder :ExtraTestFiles
 
 5.037     2015-06-04 21:46:38-04:00 America/New_York
         - issue a warning when version ranges are passed through to
